--- a/se7ati_project/se7ati_app/templates/registration/register.html
+++ b/se7ati_project/se7ati_app/templates/registration/register.html
@@ -14,11 +14,11 @@
     <div class="min-h-screen bg-gray-100 text-gray-900 flex justify-center">
         <div class="max-w-screen-xl m-0 sm:m-10 bg-white shadow sm:rounded-lg flex justify-center flex-1">
             <div class="lg:w-1/2 xl:w-5/12 p-6 sm:p-12">
-                <div>
-                    <img src="https://drive.google.com/uc?export=view&id=1MFiKAExRFF0-2YNpAZzIu1Sh52J8r16v"
-                        class="w-mx-auto" />
+                <div class=" w-48  justify-center ml-28  ">
+                    <img src="{% static 'images/logo.png' %}"
+                        class="w-mx-auto ml-8" />
                 </div>
-                <div class="mt-12 flex flex-col items-center">
+                <div class=" flex flex-col items-center">
                     <div class="w-full flex-1 mt-8">
                         <div class="flex flex-col items-center">
                             <button
@@ -46,49 +46,51 @@
     
                         </div>
     
-                        <div class="my-12 border-b text-center">
+                        <div class="my-5 border-b text-center">
                             <div
                                 class="leading-none px-2 inline-block text-sm text-gray-600 tracking-wide font-medium bg-white transform translate-y-1/2">
-                                Or sign In with Cartesian E-mail
+                                Ou connectez-vous avec un username et mot de passe
                             </div>
                         </div>
-    
+                    <form method="post">
+                        {% csrf_token %}
+                        {{ form.as_p }}
                         <div class="mx-auto max-w-xs">
                             <input
-                                class="w-full px-8 py-4 rounded-lg font-medium bg-gray-100 border border-gray-200 placeholder-gray-500 text-sm focus:outline-none focus:border-gray-400 focus:bg-white"
-                                type="email" placeholder="Email" />
+                                class="w-full px-8 py-4 rounded-lg font-medium bg-gray-100 border border-gray-200 placeholder-gray-500 text-sm focus:outline-none focus:border-gray-400 focus:bg-white mt-5"
+                                type="text" placeholder="username" name="username"/>
+                            
                             <input
                                 class="w-full px-8 py-4 rounded-lg font-medium bg-gray-100 border border-gray-200 placeholder-gray-500 text-sm focus:outline-none focus:border-gray-400 focus:bg-white mt-5"
-                                type="password" placeholder="Password" />
-                            <button
+                                type="email" placeholder="email" name="email" />
+                            <input
+                                class="w-full px-8 py-4 rounded-lg font-medium bg-gray-100 border border-gray-200 placeholder-gray-500 text-sm focus:outline-none focus:border-gray-400 focus:bg-white mt-5"
+                                type="password" name="password" placeholder="mot de passe" />
+
+                            <input
+                            class="w-full px-8 py-4 rounded-lg font-medium bg-gray-100 border border-gray-200 placeholder-gray-500 text-sm focus:outline-none focus:border-gray-400 focus:bg-white mt-5"
+                            type="password" name="confirm-password" placeholder="Confirmé mot de passe" />
+                            <button type="submit"
                                 class="mt-5 tracking-wide font-semibold bg-green-400 text-white-500 w-full py-4 rounded-lg hover:bg-green-700 transition-all duration-300 ease-in-out flex items-center justify-center focus:shadow-outline focus:outline-none">
-                                <svg class="w-6 h-6 -ml-2" fill="none" stroke="currentColor" stroke-width="2"
+                                <svg class="w-6 h-6 -ml-2 mr-2" fill="none" stroke="currentColor" stroke-width="2"
                                     stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M16 21v-2a4 4 0 00-4-4H5a4 4 0 00-4 4v2" />
                                     <circle cx="8.5" cy="7" r="4" />
                                     <path d="M20 8v6M23 11h-6" />
                                 </svg>
-                                <span class="ml-">
+                                <span class="ml-" >
                                     Sign In
                                 </span>
                             </button>
-                            <p class="mt-6 text-xs text-gray-600 text-center">
-                                I agree to abide by Cartesian Kinetics
-                                <a href="#" class="border-b border-gray-500 border-dotted">
-                                    Terms of Service
-                                </a>
-                                and its
-                                <a href="#" class="border-b border-gray-500 border-dotted">
-                                    Privacy Policy
-                                </a>
-                            </p>
+                          
                         </div>
+                    </form>
                     </div>
                 </div>
             </div>
             <div class="flex-1 bg-green-100 text-center hidden lg:flex">
-                <div class="m-12 xl:m-16 w-full bg-contain bg-center bg-no-repeat"
-                    style="background-image: url('https://drive.google.com/uc?export=view&id=1KZ_Ub_2lZ0dHbKV0fAIhxVhiQA183RCz');">
+                <div class="m-12 xl:m-16 w-full bg-contain bg-center bg-no-repeat">
+                   <img src="{% static 'images/Doctors-bro.png' %}">
                 </div>
             </div>
         </div>
