--- a/se7ati_project/se7ati_app/templates/registration/register.html
+++ b/se7ati_project/se7ati_app/templates/registration/register.html
@@ -54,23 +54,20 @@
                         </div>
                     <form method="post">
                         {% csrf_token %}
-                        {{ form.as_p }}
-                        <div class="mx-auto max-w-xs">
-                            <input
-                                class="w-full px-8 py-4 rounded-lg font-medium bg-gray-100 border border-gray-200 placeholder-gray-500 text-sm focus:outline-none focus:border-gray-400 focus:bg-white mt-5"
-                                type="text" placeholder="username" name="username"/>
-                            
-                            <input
-                                class="w-full px-8 py-4 rounded-lg font-medium bg-gray-100 border border-gray-200 placeholder-gray-500 text-sm focus:outline-none focus:border-gray-400 focus:bg-white mt-5"
-                                type="email" placeholder="email" name="email" />
-                            <input
-                                class="w-full px-8 py-4 rounded-lg font-medium bg-gray-100 border border-gray-200 placeholder-gray-500 text-sm focus:outline-none focus:border-gray-400 focus:bg-white mt-5"
-                                type="password" name="password" placeholder="mot de passe" />
-
-                            <input
-                            class="w-full px-8 py-4 rounded-lg font-medium bg-gray-100 border border-gray-200 placeholder-gray-500 text-sm focus:outline-none focus:border-gray-400 focus:bg-white mt-5"
-                            type="password" name="confirm-password" placeholder="Confirmé mot de passe" />
-                            <button type="submit"
+                       
+                        {% csrf_token %}
+            {% for field in form %}
+                <div>
+                    
+                    {{ field }}
+                    {% if field.errors %}
+                        <p class="text-red-500 text-sm mt-1">
+                            {{ field.errors.0 }}
+                        </p>
+                    {% endif %}
+                </div>
+            {% endfor %}
+            <button type="submit"
                                 class="mt-5 tracking-wide font-semibold bg-green-400 text-white-500 w-full py-4 rounded-lg hover:bg-green-700 transition-all duration-300 ease-in-out flex items-center justify-center focus:shadow-outline focus:outline-none">
                                 <svg class="w-6 h-6 -ml-2 mr-2" fill="none" stroke="currentColor" stroke-width="2"
                                     stroke-linecap="round" stroke-linejoin="round">
@@ -82,8 +79,7 @@
                                     Sign In
                                 </span>
                             </button>
-                          
-                        </div>
+
                     </form>
                     </div>
                 </div>
@@ -95,6 +91,12 @@
             </div>
         </div>
     </div> 
+    <style>
+         input[type="text"]{
+            @apply w-full px-8 py-4 rounded-lg font-medium bg-gray-100 border border-gray-200 placeholder-gray-500 text-sm focus:outline-none focus:border-gray-400 focus:bg-white mt-5;
+
+         }
+    </style>
 </body>
 </html>
 
