--- a/se7ati_project/se7ati_app/templates/tools/pharmacies.html
+++ b/se7ati_project/se7ati_app/templates/tools/pharmacies.html
@@ -19,7 +19,7 @@
                      <path clip-rule="evenodd" fill-rule="evenodd" d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"></path>
                   </svg>
                </button>
-              <a href="https://flowbite.com" class="flex ms-2 md:me-24">
+              <a href="{% url 'home'%}" class="flex ms-2 md:me-24">
                 <img src="{% static 'images/logo.png'%}" class="h-8 me-3" alt="FlowBite Logo" />
                 <span class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap"></span>
               </a>
@@ -75,6 +75,7 @@
     
     
           <form action="" method="POST">
+            {% csrf_token %}
                 <br><br>
               
                 <div class="flex">
@@ -117,22 +118,22 @@
             </svg>
         </div>
     </div>
-
-    <div class="flex max-w-lg bg-white rounded-2xl shadow-lg overflow-hidden border border-gray-200 ml-80">
+    {% for pharmacie in pharmacies %}
+    <div class="flex mt-10 mb-10 max-w-lg bg-white rounded-2xl shadow-lg overflow-hidden border border-gray-200 ml-80">
       <img class="mt-4 w-32 h-42 object-cover" src="{% static 'images/pharmacie_icon.png' %}" alt="Pharmacy">
       <div class="p-5 flex flex-col justify-between">
-          <h3 class="text-xl font-semibold text-gray-800">Pharmacie Centrale</h3>
-          <p class="text-gray-600 mt-1">📍 123 Rue de la Santé, Paris</p>
-          <p class="text-gray-600 mt-1">☎️ +33 1 23 45 67 89</p>
-          <p class="text-gray-600 mt-1">🕒 Ouvert de 8h00 à 20h00</p>
+          <h3 class="text-xl font-semibold text-gray-800">{{ pharmacie.name }}</h3>
+          <p class="text-gray-600 mt-1">📍 {{ pharmacie.address }}</p>
+          <p class="text-gray-600 mt-1">☎️ {{ pharmacie.phone }}</p>
+          <p class="text-gray-600 mt-1">🕒 {{ pharmacie.duty }}</p>
           <div class="mt-3">
-              <a href="#" class="inline-block px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">
-                  Voir les détails
+              <a href="{{ pharmacie.localisation }}" class="inline-block px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">
+                Voir sur la carte
               </a>
           </div>
       </div>
   </div>
-  
+  {% endfor %}
   <script>
     document.getElementById('VilleSelect1').addEventListener('change', function() {
         const cityId = this.value;
