--- a/se7ati_project/se7ati_app/templates/includes/navbar.html
+++ b/se7ati_project/se7ati_app/templates/includes/navbar.html
@@ -83,7 +83,7 @@
               </li>
               <li>
                 <a
-                  href="#"
+                  href="{% url 'edit_profile' %}"
                   class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                   role="menuitem"
                   >Settings</a
