mesure glycemie front

--- a/se7ati_project/se7ati_app/templates/includes/sidebar.html
+++ b/se7ati_project/se7ati_app/templates/includes/sidebar.html
@@ -136,6 +136,19 @@
           <span class="ms-3">Ai Assistant</span>
         </a>
       </li>
+
+      <li>
+        <a
+          href="{% url 'glucoseLevel' %}"
+          class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
+        >
+        <svg class="w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v15a1 1 0 0 0 1 1h15M8 16l2.5-5.5 3 3L17.273 7 20 9.667"/>
+        </svg>
+        
+          <span class="ms-3">Statistique</span>
+        </a>
+      </li>
       <li>
         <a
           href="#"
