--- a/se7ati_project/se7ati_app/templates/statistics/glycemi_statistcs.html
+++ b/se7ati_project/se7ati_app/templates/statistics/glycemi_statistcs.html
@@ -132,7 +132,7 @@
               <p class="text-gray-900 dark:text-white text-2xl leading-none font-bold">42,3k</p>
             </div>
             <div>
-              <h5 class="inline-flex items-center text-gray-500 dark:text-gray-400 leading-none font-normal mb-2">CPC
+              {% comment %} <h5 class="inline-flex items-center text-gray-500 dark:text-gray-400 leading-none font-normal mb-2">CPC {% endcomment %}
               <svg data-popover-target="cpc-info" data-popover-placement="bottom" class="w-3 h-3 text-gray-400 hover:text-gray-900 dark:hover:text-white cursor-pointer ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                   <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
                 </svg>
@@ -149,7 +149,7 @@
                     <div data-popper-arrow></div>
                 </div>
               </h5>
-              <p class="text-gray-900 dark:text-white text-2xl leading-none font-bold">$5.40</p>
+              {% comment %} <p class="text-gray-900 dark:text-white text-2xl leading-none font-bold">$5.40</p> {% endcomment %}
             </div>
           </div>
           <div>
