register/login doctot + dashboard

--- a/se7ati_project/se7ati_app/templates/registration/register_doctor.html
+++ b/se7ati_project/se7ati_app/templates/registration/register_doctor.html
@@ -86,7 +86,7 @@
             </div>
             <div class="flex-1 bg-green-100 text-center hidden lg:flex">
                 <div class="m-12 xl:m-16 w-full bg-contain bg-center bg-no-repeat">
-                   <img src="{% static 'images/Fitness.png' %}">
+                   <img src="{% static 'images/Doctors-bro.png' %}">
                 </div>
             </div>
         </div>
